--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
     
+<h2>Muhammad Nadir Raihan</h2>
+<img src="DSC09293.JPG" alt="profile" width="250" height="360">
+<h3>Tentang Saya</h3>
+<p>Saya Muhammad Nadir Raihan, Saya sedang berkuliah di Universitas Negeri Surabaya, Program Studi S1 Teknik Informatika. Etos Kerja, Disiplin, <br>Jujur dan Bertanggung Jawab selalu saya utamakan dalam menyelesaikan setiap pekerjaan. Saya memiliki pengalaman kerja, memiliki semangat <br>tinggi, mudah beradaptasi, serta tertarik mempelajari hal baru</p>
+
+<h3>Keahlian Saya</h3>
+<ol>
+    <li>Android Developer</li>
+    <li>UI/UX Designer</li>
+    <li>FrontEnd Developer</li>
+</ol>
+
+<h3>Pendidikan Saya</h3>
+<ul>
+    <li>2007 - 2013 SD Negeri Barata Jaya Surabaya</li>
+    <li>2013 - 2016 SMP Negeri 12 Surabaya</li>
+    <li>2016 - 2019 SMA Negeri 10 Surabaya</li>
+    <li>2019 - Sekarang Fakultas Teknik,Teknik Informatika Universitas Negeri Surabaya</li>
+</ul>
+
+<h3>Kontak Saya</h3>
+<a href="https://www.facebook.com/muhammadnadir.raihan.9" target="_blank">Facebook</a> |
+<a href="https://www.instagram.com/naderrhn_/" target="_blank">Instagram</a> |
+<a href="https://www.tiktok.com/@nader141414" target="_blank">Tiktok</a>
 </body>
 </html>
